--- a/home.css
+++ b/home.css
@@ -31,3 +31,33 @@ img{
 a:hover{
     color: antiquewhite;
 }
+th{
+    padding: 20px;
+    border-bottom: 10px solid crimson;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: larger;
+}
+tr:hover{
+    color: antiquewhite;
+}
+input{
+    background-color: rgb(189, 184, 184);
+    color:rgb(1, 59, 59);
+}
+::placeholder{
+    color:rgb(66, 119, 13);
+}
+hr{
+    height: 1px;
+    background-color: rgb(25,25,25);
+    border: none;
+}
+a{
+    color: aquamarine;
+}
+.text{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 8%;
+}
